# tap-opensea_no_api_key

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_opensea_no_api_key/: client.py  streams.py  tap.py
tap_opensea_no_api_key/tests/: __init__.py  test_core.py
